# text-editor

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: macros.rs  main.rs  rope.rs
src/editor/: editor.rs  keybinds.rs  keymap.rs  mod.rs
src/util/: display.rs  keymap.rs  mod.rs  rope.rs
