[package]
name = "text-editor"
version = "0.1.0"
edition = "2021"
authors = ["Ceferino Patino <c4patino@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } 
